--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-hello world! this file is reserved for the index page of what will eventually become my class portfolio for art of the web :-)
+<body> 
+    hello world! this file is reserved for the index page of what will eventually become my class portfolio for art of the web :-)
+<img src="batteryemoji.png">
+</body>
+
