--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <p>CREATED BY EMMI WU</p>
             </div>
         </div>
+        <div class="external-link">
+            <a class="tiny-external-btn" href="https://clew2027.github.io/" target="_blank" rel="noopener noreferrer">my buddy's work ➤</a>
+        </div>
     </div>
 
     <!-- Choice Screen -->
