--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Night Path - A Choose Your Own Adventure</title>
-    <link rel="stylesheet" href="s1fp/style.css">
+    <link rel="stylesheet" href="s1fp/style.css?v=2">
 </head>
 <body>
     <!-- Start Screen -->
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="external-link">
-            <a class="tiny-external-btn" href="https://clew2027.github.io/" target="_blank" rel="noopener noreferrer">my buddy's work ➤</a>
+            <a class="tiny-external-btn" href="https://clew2027.github.io/" target="_blank" rel="noopener noreferrer" style="color: #cbd5e1; text-decoration: none; background: transparent;">my buddy's work ➤</a>
         </div>
     </div>
 
