fix: update linky dinky :-)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="external-link">
-            <a class="tiny-external-btn" href="https://clew2027.github.io/" target="_blank" rel="noopener noreferrer" style="color: #cbd5e1; text-decoration: none; background: transparent;">my buddy's work ➤</a>
+            <a class="tiny-external-btn" href="https://clew2027.github.io/s1fp/" target="_blank" rel="noopener noreferrer" style="color: #cbd5e1; text-decoration: none; background: transparent;">my buddy's work ➤</a>
         </div>
     </div>
 
