--- a/s2a2/index.html
+++ b/s2a2/index.html
@@ -4,18 +4,44 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>s2a2 — Starter</title>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'IBM Plex Sans Mono', monospace; background:#0a0a0a; color:#fff; display:flex; align-items:center; justify-content:center; height:100vh; margin:0 }
-    .card { text-align:center }
-    a { color:#9fb1c8 }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="card">
-    <h1>s2a2</h1>
-    <p>Starter project folder. Add your files here.</p>
-    <p><a href="../">Back to repo root</a></p>
+  <header class="site-header">
+    <div class="header-inner">
+  <div class="site-title"><a href="index.html">EMMI'S DISCOGRAPHY</a></div>
+  <nav class="site-nav"><a href="about.html">ABOUT</a></nav>
+    </div>
+  </header>
+
+  <div class="wrap">
+    <div class="title">
+  <h2>When I'm not fine-tuning my designs,<br>I'm listening to these tunes... ♫⋆｡♪₊˚♬゚。</h2>
+    </div>
+    <div class="grid">
+  <div class="album" data-audio="audio/album1.mp3" data-track-title="KYOTO" data-track-artist="PHOEBE BRIDGERS">
+    <div class="sleeve"><img src="album1.png" alt="album 1"></div>
+  <div class="record"><div class="disc spin"><img src="record1.png" alt="record 1"><div class="label"></div></div></div>
+      </div>
+  <div class="album" data-audio="audio/album2.mp3" data-track-title="DON'T TAKE THE MONEY" data-track-artist="BLEACHERS">
+    <div class="sleeve"><img src="album2.png" alt="album 2"></div>
+  <div class="record"><div class="disc spin"><img src="record2.png" alt="record 2"><div class="label"></div></div></div>
+      </div>
+  <div class="album" data-audio="audio/album3.mp3" data-track-title="YOU-HAHAHA" data-track-artist="CHARLI XCX">
+    <div class="sleeve"><img src="album3.png" alt="album 3"></div>
+  <div class="record"><div class="disc spin"><img src="record3.png" alt="record 3"><div class="label"></div></div></div>
+      </div>
+    </div>
   </div>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+  <div class="follow"><a href="https://open.spotify.com/user/emmi.wu?si=f28bdbdad5be4a96" target="_blank" rel="noopener noreferrer">FOLLOW MY <strong>SPOTIFY</strong></a></div>
+  <div class="credit">CREATED BY <a href="https://emmi.framer.website/" target="_blank" rel="noopener noreferrer"><strong>EMMI</strong></a></div>
+    </div>
+  </footer>
+  </div>
+  <script src="main.js"></script>
 </body>
 </html>
