updated alt text

--- a/s2a2/index.html
+++ b/s2a2/index.html
@@ -21,16 +21,16 @@
     </div>
     <div class="grid">
   <div class="album" data-audio="audio/album1.mp3" data-track-title="KYOTO" data-track-artist="PHOEBE BRIDGERS">
-    <div class="sleeve"><img src="album1.png" alt="album 1"></div>
-  <div class="record"><div class="disc spin"><img src="record1.png" alt="record 1"><div class="label"></div></div></div>
+    <div class="sleeve"><img src="album1.png" alt="my playlist for march 2023 - i must have been depressed bc all the songs are sad"></div>
+  <div class="record"><div class="disc spin"><img src="record1.png" alt="kyoto by phoebe bridgers"><div class="label"></div></div></div>
       </div>
   <div class="album" data-audio="audio/album2.mp3" data-track-title="DON'T TAKE THE MONEY" data-track-artist="BLEACHERS">
-    <div class="sleeve"><img src="album2.png" alt="album 2"></div>
-  <div class="record"><div class="disc spin"><img src="record2.png" alt="record 2"><div class="label"></div></div></div>
+    <div class="sleeve"><img src="album2.png" alt="another happy summer playlist - i must have been happier "></div>
+  <div class="record"><div class="disc spin"><img src="record2.png" alt="dont take the money by the bleachers"><div class="label"></div></div></div>
       </div>
   <div class="album" data-audio="audio/album3.mp3" data-track-title="YOU-HAHAHA" data-track-artist="CHARLI XCX">
-    <div class="sleeve"><img src="album3.png" alt="album 3"></div>
-  <div class="record"><div class="disc spin"><img src="record3.png" alt="record 3"><div class="label"></div></div></div>
+    <div class="sleeve"><img src="album3.png" alt="i should have entered the job marketing in 2018 - if ur reading this give me a refferal"></div>
+  <div class="record"><div class="disc spin"><img src="record3.png" alt="you-hahaha by charli xcx #stanbrat"><div class="label"></div></div></div>
       </div>
     </div>
   </div>
