updated even MORE alt text

--- a/s2a2/about.html
+++ b/s2a2/about.html
@@ -19,7 +19,7 @@
     <div class="about">
       <div class="about-left">
         <figure class="about-image">
-          <img src="about-photo.png" alt="portrait" />
+          <img src="about-photo.png" alt="photo of me looksmaxing with my wired earbuds from middle school" />
           <figcaption>MY AND MY 2016 WIRED EARBUDS AGAINST THE WORLD. (MY AIRPODS BROKE)</figcaption>
         </figure>
       </div>
