--- a/s2fp/index.html
+++ b/s2fp/index.html
@@ -4,13 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Solar Day Clock</title>
+
+  <!-- IBM Plex Mono -->
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+
   <style>
-    html, body { margin: 0; height: 100%; background:#1f2326; }
-    canvas { display:block; }
+    html, body {
+      margin: 0;
+      height: 100%;
+      background: #1C2027;
+    }
+    canvas { display: block; }
   </style>
-  <!-- p5 -->
+
+  <!-- p5.js + SunCalc -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.min.js"></script>
-  <!-- SunCalc (solar times) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/suncalc/1.9.0/suncalc.min.js"></script>
 </head>
 <body>
